--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,6 @@ body {
   background-color: #637373;
 }
 .currentLocation {
-  display: block;
   margin: 10px auto;
   margin-top: 30px;
   border: 1px solid #065c6f;
@@ -23,6 +22,7 @@ body {
   transition: all 200ms ease;
   box-shadow: rgba(37, 39, 89, 0.08) 0px 8px 8px 0;
   cursor: pointer;
+  display: block;
 }
 .currentLocation:hover {
   background-color: #637373;
@@ -57,7 +57,7 @@ a {
   margin-left: 10px;
 }
 .container {
-  max-width: 600px;
+  max-width: 400px;
   padding: 15px 30px;
   border: 1px solid #212121;
   border-radius: 10px;
@@ -102,4 +102,9 @@ hr {
 }
 .card:hover {
   background-image: linear-gradient(-225deg, #e3fdf5 0%, #ffe6fa 100%);
+}
+
+.outside {
+  text-align: center;
+  margin-top: 15px;
 }
